package org.draw.paint.canvas

object CanvasConstants {
    const val WIDTH_BORDER_CHAR = "-"
    const val HEIGHT_BORDER_CHAR = "|"
    const val DEFAULT_DISPLAY_CHAR = " "
    const val INVALID_TEXT_CHAR = "~"
    const val LINE_DISPLAY_CHAR = "*"
}
